--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "Gyeonggi-do, Republic of Korea"
+locale                   : "ko-KR"
 title                    : "펠릭스의 블로그"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
