--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "펠릭스의 블로그"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "펠릭스"
-description              : "An amazing website."
+description              : "펠릭스의 블로그 입니다."
 url                      : "https://0ne-more.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
