--- a/_config.yml
+++ b/_config.yml
@@ -17,9 +17,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "ko-KR"
 title                    : "펠릭스의 블로그"
-title_separator          : "-"
+title_separator          : "|"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "펠릭스"
+name                     : "Felix"
 description              : "펠릭스의 블로그 입니다."
 url                      : "https://0ne-more.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -104,11 +104,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "펠릭스"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : "펠릭스의 블로그 입니다."
+  location         : "South Korea"
+  email            : "yangwonmo71@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
