--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "0a3e26d1bd11771109a3e605b0d84f64a9d205a4"
 yandex_site_verification :
 baidu_site_verification  :
 
