--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links
 main:
-  - title: "category"
+  - title: "Category"
   - url: /categories/
-    - title: "Teg"
-  - url: /tegs/
+    - title: "Tag"
+  - url: /tags/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
